# Voxel-Factory

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.cpp  voxelfactory
Blender/: Furnace.blend  Furnace.blend1  Furnace.mtl
Shader/: block.frag  blocks.vert
assets/piskel/: VoxelFactoryBlocs.piskel
src/: CMakeLists.txt  main.cpp
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp  ManageEvents.cpp
src/Glad/: CMakeLists.txt
src/Glad/include/glad/: glad.h
src/Glad/src/: glad.c
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/Mesher/: CMakeLists.txt  MeshGeneration.cpp  Mesher.cpp  Mesher.hpp
src/OpenGLUtils/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  TextureAtlas.cpp  TextureAtlas.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Renderer/: CMakeLists.txt  FetchInput.cpp  RenderFrame.cpp  Renderer.cpp  Renderer.hpp  RendererGettersSetters.cpp  Shader.cpp  Shader.hpp
src/SharedState/: CMakeLists.txt  Camera.cpp  Camera.hpp  ChunckMap.hpp  Chunk.cpp  Chunk.hpp  Event.hpp  SafeCamera.hpp  SharedState.cpp  SharedState.hpp  ThreadSafeQueue.hpp  ThreadSafeQueue.tpp
